	for gaim, and doing all kinds of crazy things to work around the
	problems that creates, the plugins now have the same CFLAGS and LIBS.
	The plugins also have PLUGIN_LIBS which can be passed at make time.
	This makes things like #ifdef USE_APPLET and #ifdef USE_PERL much more
	reliable. (#include "config.h" in order to get all the #defines)

version 0.9.20:
	It's 3 am the night before finals, it's obviously a good time to hack
	gaim.

	This became quite long, and if you don't want to read it all, here's
	the important stuff summed up:
	- 9 new events (see SIGNALS file for more details)
	- int gaim_plugin_init(void *) (no longer returns void, see error.c)
	- void gaim_plugin_unload(void *) (to allow plugin to remove itself)
	- can only load 1 instance of the same plugin
	- PLUGIN_LIBS for extra libraries for plugin

	The first thing to note is that there are about 9 new events plugins
	can attach to, most of them dealing with chat, since I know that was a
	big thing that was missing. Please note that I was nice and decided to
	tack these extra events onto the end of the enum, which means that
	plugins do not have to be recompiled in order for them to still work.

	The big change is that gaim_plugin_init no longer returns void, but
	int.  If it returns 0+, gaim interprets this as there being no error,
	and continues with loading as normal. (This should be backwards-
	compatible: returning 0/1 is the equivalent of returning void.) If it
	returns a number less than 0, there was an error loading detected by
	the plugin. At that point, gaim will try to clean things up by removing
	any callbacks that have been added by the plugin. It will then try to
	call the plugin's gaim_plugin_error function, if there is one. The
	function should take an int (the int returned by gaim_plugin_init) and
	return a char*. If the char* is not NULL, it is displayed by gaim as an
	error message.  The plugin is then unloaded and closed and life goes